fixed z-index of header

--- a/client/src/components/Landing/Header/Tablet/HeaderTablet.styles.css
+++ b/client/src/components/Landing/Header/Tablet/HeaderTablet.styles.css
@@ -10,6 +10,7 @@
     top: 0;
     background-color: white;
     margin: 0 auto;
+    z-index: 9999;
   }
 
   .header__inner--tablet {
